--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -90,9 +90,7 @@
                 <div class="brand-overlay"></div>
                 <div class="title">DICOM READER</div>
                 <div class="description">The world famous medical images viewer</div>
-                <img class="brand-devices-ipad" src="/asset/ipad.png" alt="devices">
-                <img class="brand-devices-macbook" src="/asset/macbook.png" alt="devices">
-                <img class="brand-devices-imac" src="/asset/imac.png" alt="devices">
+                <img class="brand-devices" src="/asset/devices.png" alt="devices">
             </div>
             <div class="brand-content">
                 With high performance and an intuitive interactive user interface, DiRea is the most widely used DICOM viewer in the world. It is the result of more than 15 years of research and development in digital imaging. It fully supports the DICOM standard for
