--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -637,7 +637,7 @@ tbody tr {
 .slider-overlay {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(0, 0, 0, .75);
     z-index: 10;
 }
@@ -732,29 +732,12 @@ tbody tr {
     color: #46bd79;
 }
 
-img.brand-devices-ipad {
+img.brand-devices {
+    width: 83%;
     position: absolute;
-    width: 26%;
-    bottom: -28%;
-    left: 7%;
-    z-index: 21;
-}
-
-img.brand-devices-macbook {
-    position: absolute;
-    width: 40%;
-    bottom: -29%;
-    left: 47%;
+    bottom: -140px;
+    left: 50%;
     transform: translateX(-50%);
-    z-index: 20;
-}
-
-img.brand-devices-imac {
-    position: absolute;
-    width: 45%;
-    bottom: -28%;
-    right: 7%;
-    z-index: 19;
 }
 
 .browsers-container {
@@ -1759,4 +1742,10 @@ input[type=range]:focus::-ms-fill-upper {
     text-decoration: none;
     background-color: #dedede;
     font-family: 'Roboto', sans-serif;
+}
+
+@media screen and (max-width: 1366px) {
+    img.brand-devices {
+        bottom: -90px;
+    }
 }
