--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -98,7 +98,7 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 999;
+    z-index: 99;
     background-color: rgba(22, 22, 22, .8);
 }
 
@@ -183,7 +183,7 @@ body {
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
     transform-origin: center center;
-    z-index: 10000;
+    z-index: 100;
     overflow-y: hidden;
     background-color: #fcfcfc;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -388,6 +388,8 @@ tbody tr {
 
 .files-table th {
     font-weight: 500;
+    padding: 0;
+    border-radius: 0;
 }
 
 .files-table thead tr:last-child th {
@@ -405,6 +407,8 @@ tbody tr {
 
 .files-table tbody td {
     border-bottom: 1px solid #ddd;
+    padding: 0;
+    border-radius: 0;
 }
 
 .files-table td:last-child {
@@ -590,6 +594,7 @@ tbody tr {
     padding: 10px 40px;
     margin: 10px auto 0;
     cursor: pointer;
+    box-sizing: content-box;
 }
 
 .upload-button {
@@ -718,11 +723,16 @@ tbody tr {
 .brand-content {
     position: relative;
     width: 80%;
-    margin: 17% auto 2%;
+    margin: 40px auto 40px;
     color: #292c30;
     font-size: 18px;
     font-weight: 300;
     text-align: justify;
+}
+
+.browser {
+    -webkit-box-sizing: initial;
+    box-sizing: initial;
 }
 
 .browser .title {
@@ -768,7 +778,7 @@ img.brand-devices {
     background: -o-linear-gradient(#9e9e9e, #607d8b);
     background: -moz-linear-gradient(#9e9e9e, #607d8b);
     background: linear-gradient(#9e9e9e, #607d8b);
-    z-index: 10000;
+    z-index: 101;
     transition: background ease-in .4s;
 }
 
@@ -1256,6 +1266,12 @@ span.file-name,
     text-align: center;
 }
 
+.ray-config {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+}
+
 .controller {
     display: flex;
     align-items: center;
@@ -1500,114 +1516,6 @@ span.file-name,
     left: 4px;
     top: 1px;
 }
-
-
-/* input[type=range] {
-    -webkit-appearance: none;
-    position: absolute;
-    width: 95%;
-    top: 35px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: transparent;
-}
-
-input[type=range]:focus {
-    outline: none;
-}
-
-input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 8px;
-    cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-    background: #f7f9fc;
-    border-radius: 30px;
-    border: 0px solid #000101;
-}
-
-input[type=range]::-webkit-slider-thumb {
-    box-shadow: 0px 0px 0px #0e0d0d, 0px 0px 0px #0d0d0d;
-    border: 0px solid #000000;
-    height: 15px;
-    width: 30px;
-    border-radius: 7px;
-    background: #a4a6a8;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -3.6px;
-}
-
-input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #f7f9fc;
-}
-
-input[type=range]::-moz-range-track {
-    width: 100%;
-    height: 8px;
-    cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-    background: #f7f9fc;
-    border-radius: 30px;
-    border: 0px solid #000101;
-}
-
-input[type=range]::-moz-range-thumb {
-    box-shadow: 0px 0px 0px #0e0d0d, 0px 0px 0px #0d0d0d;
-    border: 0px solid #000000;
-    height: 15px;
-    width: 30px;
-    border-radius: 7px;
-    background: #a4a6a8;
-    cursor: pointer;
-    margin-top: -3.6px;
-}
-
-input[type=range]::-ms-track {
-    width: 100%;
-    height: 8px;
-    cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-    background: #f7f9fc;
-    border-radius: 30px;
-    border: 0px solid #000101;
-}
-
-input[type=range]::-ms-fill-lower {
-    background: #ac51b5;
-    border: 0px solid #000101;
-    border-radius: 50px;
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-}
-
-input[type=range]::-ms-fill-upper {
-    background: #ac51b5;
-    border: 0px solid #000101;
-    border-radius: 50px;
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-}
-
-input[type=range]::-ms-thumb {
-    box-shadow: 0px 0px 0px #0e0d0d, 0px 0px 0px #0d0d0d;
-    border: 0px solid #000000;
-    height: 15px;
-    width: 30px;
-    border-radius: 7px;
-    background: #a4a6a8;
-    cursor: pointer;
-    margin-top: -3.6px;
-}
-
-input[type=range]:focus::-ms-fill-lower {
-    background: #f7f9fc;
-}
-
-input[type=range]:focus::-ms-fill-upper {
-    background: #f7f9fc;
-} */
 
 
 /* TEST */
