--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -1121,19 +1121,19 @@ span.file-name,
     background: #ccc;
 }
 
-.delete-render {
+.button-container {
+    display: flex;
     position: absolute;
     right: 20px;
-    cursor: pointer;
-    padding: 5px 7px;
-    opacity: 1;
 }
 
+.slice-list:hover,
 .delete-render:hover {
     opacity: .85;
 }
 
-.delete-render {
+.delete-render,
+.slice-list {
     font-size: 15px;
     letter-spacing: 1px;
     border-width: 0;
@@ -1143,6 +1143,39 @@ span.file-name,
     background-color: #4f5256;
     color: #ecf0f1;
     transition: all ease .3s;
+    cursor: pointer;
+    padding: 5px 7px;
+    opacity: 1;
+    margin-right: 5px;
+}
+
+.list-files {
+    overflow-x: hidden;
+}
+
+.list-files .title {
+    font-weight: 700;
+    font-size: 23px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-left: 3px;
+}
+
+.list-files::-webkit-scrollbar-track {
+    background-color: #eaeaea;
+    border-left: 1px solid #ccc;
+}
+
+.list-files::-webkit-scrollbar {
+    width: 13px;
+}
+
+.list-files::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+}
+
+.list-files::-webkit-scrollbar-button {
+    display: none;
 }
 
 .render-info .content {
@@ -1534,22 +1567,32 @@ span.file-name,
 }
 
 .file {
-    width: calc(33.33% - 6px);
+    width: calc(10% - 1px);
     height: 0px;
-    padding-bottom: 31%;
-    margin: 2px;
-    border: 1px solid #fff;
+    padding-bottom: 9%;
+    margin: 5px;
+    border: 1px solid #333333;
     float: left;
     position: relative;
+    overflow: hidden;
+}
+
+.file canvas {
+    transition: all ease .2s;
+}
+
+.file canvas:hover {
+    transform: scale(1.3);
 }
 
 .slice-number {
     position: absolute;
     color: #fff;
     font-weight: 500;
-    font-size: 20px;
-    left: 4px;
+    font-size: 16px;
+    left: 2px;
     top: 1px;
+    z-index: 10;
 }
 
 
@@ -1566,6 +1609,7 @@ span.file-name,
     top: unset !important;
     left: 5px !important;
     bottom: 5px !important;
+    z-index: 1000 !important;
 }
 
 #my-gui-container input[type=text]:not(.browser-default) {
@@ -1699,4 +1743,14 @@ span.file-name,
     img.brand-devices {
         bottom: -90px;
     }
+}
+
+.slick-prev,
+.slick-next {
+    display: none;
+}
+
+.modal.temp-block {
+    display: block;
+    visibility: hidden;
 }
