--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -127,9 +127,14 @@
         </div>
     </div>
     <div class="viewer">
-        <div id="modal1" class="modal temp-block">
+        <div id="modal1" class="modal modal-fixed-footer temp-block" style="border-radius:12px;">
             <div class="modal-content list-files">
                 <div class="title">Slice list</div>
+                <div class="loaded-slices"></div>
+                <div class="modal-footer">
+                    <div class="slice-amount"></div>
+                    <div class="modal-close waves-effect btn-flat" style="color:#FFF;">Close</div>
+                </div>
             </div>
         </div>
         <div class="viewer-container">
@@ -208,7 +213,7 @@
                             <div class="datasets-setting">
                                 <div class="file-interact">
                                     <i class="material-icons visible">visibility</i>
-                                    <span class="file-name">vhf1.dcm</span>
+                                    <span class="algorithm-name"></span>
                                     <div class="button-container">
                                         <div class="slice-list modal-trigger" href="#modal1">List</div>
                                         <div class="delete-render">Delete</div>
@@ -274,13 +279,13 @@
                                         <div class="attribute-config texture-setting hidden">
                                             <div class="texture-min-color">
                                                 <span class="color-min-title">Min Color:</span>
-                                                <input class="min-color-picker jscolor {onFineChange:'texturebasedUpdateMinColor(this)'} ripple" value="ab2567">
+                                                <input class="min-color-picker jscolor {onFineChange:'texturebasedUpdateMinColor(this)'} ripple" value="000000">
                                             </div>
                                         </div>
                                         <div class="attribute-config texture-setting hidden">
                                             <div class="texture-max-color">
                                                 <span class="color-min-title">Max Color:</span>
-                                                <input class="max-color-picker jscolor {onFineChange:'texturebasedUpdateMaxColor(this)'} ripple" value="ab2567">
+                                                <input class="max-color-picker jscolor {onFineChange:'texturebasedUpdateMaxColor(this)'} ripple" value="ffffff">
                                             </div>
                                         </div>
                                         <div class="attribute-config ray-setting hidden">
@@ -348,7 +353,7 @@
                                         <i class="material-icons drop-down rotated">keyboard_arrow_up</i>
                                     </div>
                                     <div class="config opened">
-                                        <div class="attribute-title">
+                                        <div class="attribute-title texture-setting hidden">
                                             Window
                                         </div>
                                         <div class="attribute-config texture-setting hidden">
