--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -276,6 +276,12 @@
                                         <i class="material-icons drop-down rotated">keyboard_arrow_up</i>
                                     </div>
                                     <div class="config opened">
+                                        <div class="attribute-config marching-cube-setting hidden" style="padding-right:20px;">
+                                            <div class="vtk-color">
+                                                <input class="vtk-color-picker jscolor {onFineChange:'vtkColorPicker(this)'}" value="000000">
+                                                <a class="btn waves-effect waves-light blue vtk-color-button">Apply</a>
+                                            </div>
+                                        </div>
                                         <div class="attribute-config texture-setting hidden">
                                             <div class="texture-min-color">
                                                 <span class="color-min-title">Min Color:</span>
