add function delete cavans, reset value of slice, remove hidden class from setting

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -233,6 +233,7 @@
                                                 0
                                             </div>
                                         </div>
+                                        <!-- add class hidden when delete -->
                                         <div class="attribute-config texture-setting hidden">
                                             <div class="input-field col s12 texturebased-algorithm">
                                                 <select>
@@ -455,6 +456,7 @@
                 <div class="canvas-container">
                     <div class="lds-hourglass loading-canvas"></div>
                     <div class="rendering-layout"></div>
+                    <!-- delete 3d -->
                     <div id="3d" class="three-dimemsion">
                         <div class="title ">3D</div>
                         <div id="my-lut-container" style="display:none;">
