--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -147,15 +147,17 @@
                     <div class="description">DICOM Reader</div>
                 </div>
                 <div class="re-render">
-                    <div class="col s12">
+                    <div class="col">
                         <select class="switch-algorithm">
-                            <option value="" disabled selected>Choose your algorithm</option>
+                            <option value="" disabled selected>Choose algorithm</option>
                             <option value="marchingCube">Marching Cube</option>
                             <option value="rayCasting">Ray Casting</option>
                             <option value="textureBased">Texture-based</option>
                         </select>
                     </div>
                     <a class="waves-effect waves-light blue accent-3 btn re-render-button disabled">Render</a>
+                    <a class="waves-effect waves-light blue accent-3 btn mb-switch">Render</a>
+                    <a class="waves-effect waves-light blue accent-3 btn mb-interactor-disable">delete</a>
                 </div>
             </div>
             <div class="control-buttons">
