small fix in MB

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -157,7 +157,7 @@
                     </div>
                     <a class="waves-effect waves-light blue accent-3 btn re-render-button disabled">Render</a>
                     <a class="waves-effect waves-light blue accent-3 btn mb-switch">Render</a>
-                    <a class="waves-effect waves-light blue accent-3 btn mb-interactor-disable">delete</a>
+                    <a class="waves-effect waves-light blue accent-3 btn mb-interactor-disable"></a>
                 </div>
             </div>
             <div class="control-buttons">
