change in homeejs

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -491,5 +491,6 @@
         </div>
     </div>
 </body>
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 </html>
